[gd_scene load_steps=38 format=3 uid="uid://d2vrv3fs4nwmm"]

[ext_resource type="Script" path="res://script/level/ch1/level_1_2.gd" id="1_i7wc8"]
[ext_resource type="Texture2D" uid="uid://b8ak6jwuanmdq" path="res://asset/tiles/floor.png" id="2_7qnx4"]
[ext_resource type="Texture2D" uid="uid://cg4gvhn8dkh4x" path="res://asset/tiles/spawn_box.png" id="3_sj3e8"]
[ext_resource type="Texture2D" uid="uid://lqxph0syc7ac" path="res://asset/tiles/bricks.png" id="4_knqc3"]
[ext_resource type="PackedScene" uid="uid://cqe1c836cwb6j" path="res://scene/cek.tscn" id="5_h03t7"]
[ext_resource type="PackedScene" uid="uid://de6qmu75j1tmq" path="res://scene/chara/karakter.tscn" id="6_gqj5h"]
[ext_resource type="PackedScene" uid="uid://c80ga6hakiurs" path="res://scene/kotak.tscn" id="7_458ey"]
[ext_resource type="FontFile" uid="uid://bys4fsq5x5ci6" path="res://style/BULKYPIX.TTF" id="8_uhoaf"]
[ext_resource type="Texture2D" uid="uid://kv2rfxxbwein" path="res://asset/btn/btn_sheet.png" id="9_wq33l"]
[ext_resource type="AudioStream" uid="uid://c2xm1t42epvhv" path="res://asset/sound/sfx/btn3.mp3" id="10_u2qs6"]
[ext_resource type="PackedScene" uid="uid://b5sjrqgtkjqt8" path="res://scene/menu/level_cleared.tscn" id="10_yuaej"]
[ext_resource type="PackedScene" uid="uid://d38f1ktc1txr0" path="res://scene/menu/level_paused.tscn" id="11_cw14o"]
[ext_resource type="AudioStream" uid="uid://b4e158le2f2i6" path="res://asset/sound/sfx/btn8.mp3" id="11_ig87b"]
[ext_resource type="AudioStream" uid="uid://beeb7o60l0iaj" path="res://asset/sound/bgm3.mp3" id="12_nwks1"]
[ext_resource type="Texture2D" uid="uid://cr55xci750yw1" path="res://asset/menu/all_num.png" id="15_ur5qr"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_6m0n5"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lsy4u"]
texture = ExtResource("2_7qnx4")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_o24ge"]
texture = ExtResource("3_sj3e8")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7xsv1"]
texture = ExtResource("4_knqc3")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_r5jyi"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 3
physics_layer_0/collision_mask = 3
physics_layer_0/physics_material = SubResource("PhysicsMaterial_6m0n5")
sources/3 = SubResource("TileSetAtlasSource_lsy4u")
sources/4 = SubResource("TileSetAtlasSource_o24ge")
sources/5 = SubResource("TileSetAtlasSource_7xsv1")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gp3tc"]
size = Vector2(64, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gky31"]
size = Vector2(32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_a6k0n"]
texture = ExtResource("9_wq33l")
region_rect = Rect2(0, 32, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4l1xb"]
texture = ExtResource("9_wq33l")
region_rect = Rect2(32, 32, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uspfi"]
texture = ExtResource("9_wq33l")
region_rect = Rect2(32, 32, 32, 32)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aeys5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_duam5"]
texture = ExtResource("9_wq33l")
region_rect = Rect2(192, 32, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_scr3f"]
texture = ExtResource("9_wq33l")
region_rect = Rect2(224, 32, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_k126i"]
texture = ExtResource("9_wq33l")
region_rect = Rect2(224, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdwax"]
atlas = ExtResource("15_ur5qr")
region = Rect2(0, 0, 640, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r18po"]
atlas = ExtResource("15_ur5qr")
region = Rect2(640, 0, 64, 64)

[sub_resource type="Animation" id="Animation_3bhua"]
length = 0.001

[sub_resource type="Animation" id="Animation_x8owk"]
resource_name = "pause"

[sub_resource type="Animation" id="Animation_oc1qn"]
resource_name = "pause_hover"

[sub_resource type="Animation" id="Animation_5rdi2"]
resource_name = "reset"

[sub_resource type="Animation" id="Animation_ikqwf"]
resource_name = "reset_hover"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ghkk8"]
_data = {
"RESET": SubResource("Animation_3bhua"),
"pause": SubResource("Animation_x8owk"),
"pause_hover": SubResource("Animation_oc1qn"),
"reset": SubResource("Animation_5rdi2"),
"reset_hover": SubResource("Animation_ikqwf")
}

[node name="level-1" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="level_controller" type="Node2D" parent="."]
script = ExtResource("1_i7wc8")

[node name="TileMap" type="TileMap" parent="level_controller"]
tile_set = SubResource("TileSet_r5jyi")
rendering_quadrant_size = 32
format = 2
layer_0/tile_data = PackedInt32Array(458767, 3, 0, 524303, 3, 0, 589839, 3, 0, 655375, 3, 0, 720911, 3, 0, 786447, 3, 0, 786448, 3, 0, 786449, 3, 0, 786450, 3, 0, 786451, 3, 0, 786452, 3, 0, 720916, 5, 0, 589844, 5, 0, 524308, 3, 0, 458772, 3, 0, 458771, 3, 0, 458770, 3, 0, 458769, 3, 0, 458768, 3, 0, 524304, 3, 0, 720912, 5, 0, 720913, 5, 0, 720914, 3, 0, 720915, 5, 0, 589843, 3, 0, 524307, 3, 0, 524306, 3, 0, 524305, 3, 0, 589840, 5, 0, 589841, 3, 0, 589842, 5, 0, 524301, 3, 0, 720909, 3, 0, 524310, 3, 0, 720918, 3, 0, 851983, 3, 0, 851984, 3, 0, 851985, 3, 0, 851986, 3, 0, 851987, 3, 0, 851988, 3, 0, 524302, 3, 0, 589838, 3, 0, 655374, 3, 0, 720910, 3, 0, 786446, 3, 0, 524309, 3, 0, 589845, 3, 0, 655381, 3, 0, 720917, 3, 0, 786453, 3, 0, 589837, 3, 0, 655373, 3, 0, 589846, 3, 0, 655382, 3, 0, 786445, 3, 0, 786454, 3, 0, 524311, 3, 0, 589847, 3, 0, 655383, 3, 0, 720919, 3, 0, 786455, 3, 0, 851989, 3, 0, 458773, 3, 0, 655376, 3, 0, 655377, 3, 0, 655378, 3, 0, 655379, 3, 0, 458766, 3, 0, 458765, 5, 0, 458764, 5, 0, 524300, 3, 0, 589836, 3, 0, 655372, 3, 0, 720908, 3, 0, 786444, 3, 0, 851980, 5, 0, 851981, 5, 0, 851982, 3, 0, 917518, 3, 0, 917519, 3, 0, 917520, 3, 0, 917521, 3, 0, 917522, 3, 0, 917523, 3, 0, 917524, 3, 0, 917525, 3, 0, 917526, 3, 0, 851990, 3, 0, 851991, 5, 0, 851992, 5, 0, 786456, 3, 0, 720920, 3, 0, 655384, 3, 0, 589848, 3, 0, 524312, 3, 0, 458774, 3, 0, 393238, 3, 0, 393237, 3, 0, 393236, 3, 0, 393235, 3, 0, 393234, 3, 0, 393233, 3, 0, 393232, 3, 0, 393231, 3, 0, 393230, 3, 0, 917517, 5, 0, 917516, 5, 0, 917527, 5, 0, 917528, 5, 0, 393240, 5, 0, 393229, 5, 0, 393228, 5, 0, 851979, 5, 0, 786443, 5, 0, 720907, 5, 0, 655371, 5, 0, 589835, 5, 0, 524299, 5, 0, 458763, 5, 0, 327693, 5, 0, 327694, 5, 0, 327695, 5, 0, 327696, 5, 0, 327697, 5, 0, 327698, 5, 0, 327699, 5, 0, 327700, 5, 0, 327701, 5, 0, 327702, 5, 0, 327703, 5, 0, 458777, 5, 0, 524313, 5, 0, 589849, 5, 0, 655385, 5, 0, 720921, 5, 0, 786457, 5, 0, 851993, 5, 0, 1376282, 5, 0, 1441818, 5, 0, 983063, 5, 0, 983062, 5, 0, 983061, 5, 0, 983060, 5, 0, 983059, 5, 0, 983058, 5, 0, 983057, 5, 0, 983056, 5, 0, 983055, 5, 0, 983054, 5, 0, 983053, 5, 0, 655380, 3, 0, 458775, 5, 0, 393239, 5, 0, 458776, 5, 0)

[node name="grup_cek" type="Node2D" parent="level_controller"]

[node name="cek a" parent="level_controller/grup_cek" instance=ExtResource("5_h03t7")]
position = Vector2(512, 320)

[node name="cek f" parent="level_controller/grup_cek" instance=ExtResource("5_h03t7")]
position = Vector2(544, 320)

[node name="cek d" parent="level_controller/grup_cek" instance=ExtResource("5_h03t7")]
position = Vector2(576, 320)

[node name="cek a 2" parent="level_controller/grup_cek" instance=ExtResource("5_h03t7")]
position = Vector2(608, 320)

[node name="cek l" parent="level_controller/grup_cek" instance=ExtResource("5_h03t7")]
position = Vector2(640, 320)

[node name="karakter" parent="level_controller" instance=ExtResource("6_gqj5h")]
position = Vector2(448, 320)

[node name="grup_kotak" type="Node2D" parent="level_controller"]

[node name="a" parent="level_controller/grup_kotak" groups=["a"] instance=ExtResource("7_458ey")]
position = Vector2(480, 352)

[node name="f" parent="level_controller/grup_kotak" groups=["f"] instance=ExtResource("7_458ey")]
position = Vector2(512, 256)

[node name="d" parent="level_controller/grup_kotak" groups=["d"] instance=ExtResource("7_458ey")]
position = Vector2(608, 384)

[node name="a 2" parent="level_controller/grup_kotak" groups=["a"] instance=ExtResource("7_458ey")]
position = Vector2(672, 352)

[node name="l" parent="level_controller/grup_kotak" groups=["l"] instance=ExtResource("7_458ey")]
position = Vector2(672, 288)

[node name="o" parent="level_controller/grup_kotak" groups=["o"] instance=ExtResource("7_458ey")]
position = Vector2(576, 256)

[node name="wall" type="StaticBody2D" parent="level_controller"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="level_controller/wall"]
build_mode = 1
polygon = PackedVector2Array(448, 192, 736, 192, 736, 256, 800, 256, 800, 416, 736, 416, 736, 480, 448, 480, 448, 416, 384, 416, 384, 256, 448, 256, 448, 160, 832, 160, 832, 512, 352, 512, 352, 160, 448, 160)

[node name="CollisionShape2D" type="CollisionShape2D" parent="level_controller/wall"]
position = Vector2(544, 368)
shape = SubResource("RectangleShape2D_gp3tc")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="level_controller/wall"]
position = Vector2(640, 368)
shape = SubResource("RectangleShape2D_gp3tc")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="level_controller/wall"]
position = Vector2(528, 304)
shape = SubResource("RectangleShape2D_gky31")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="level_controller/wall"]
position = Vector2(592, 304)
shape = SubResource("RectangleShape2D_gky31")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="level_controller/wall"]
position = Vector2(656, 304)
shape = SubResource("RectangleShape2D_gky31")

[node name="menu" type="CanvasLayer" parent="level_controller"]

[node name="pause" type="Button" parent="level_controller/menu"]
offset_right = 96.0
offset_bottom = 96.0
theme_type_variation = &"FlatButton"
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_fonts/font = ExtResource("8_uhoaf")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxTexture_a6k0n")
theme_override_styles/hover = SubResource("StyleBoxTexture_4l1xb")
theme_override_styles/pressed = SubResource("StyleBoxTexture_uspfi")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_aeys5")
theme_override_styles/focus = SubResource("StyleBoxEmpty_aeys5")

[node name="reset" type="Button" parent="level_controller/menu"]
offset_left = 96.0
offset_right = 192.0
offset_bottom = 93.0
theme_type_variation = &"FlatButton"
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_fonts/font = ExtResource("8_uhoaf")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxTexture_duam5")
theme_override_styles/hover = SubResource("StyleBoxTexture_scr3f")
theme_override_styles/pressed = SubResource("StyleBoxTexture_k126i")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_aeys5")
theme_override_styles/focus = SubResource("StyleBoxEmpty_aeys5")

[node name="level_selesai" parent="." instance=ExtResource("10_yuaej")]
layout_mode = 1

[node name="level_paused" parent="." instance=ExtResource("11_cw14o")]
layout_mode = 1

[node name="numbers_con" type="HBoxContainer" parent="level_paused"]
custom_minimum_size = Vector2(449, 163)
layout_mode = 0

[node name="space" type="BoxContainer" parent="level_paused/numbers_con"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="ch" type="BoxContainer" parent="level_paused/numbers_con"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="ch_num" type="Sprite2D" parent="level_paused/numbers_con/ch"]
position = Vector2(32, 32)
texture = SubResource("AtlasTexture_pdwax")
offset = Vector2(0, 101)
hframes = 10
frame = 1

[node name="strip" type="BoxContainer" parent="level_paused/numbers_con"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="strip" type="Sprite2D" parent="level_paused/numbers_con/strip"]
position = Vector2(28, 32)
texture = SubResource("AtlasTexture_r18po")
offset = Vector2(0, 101)

[node name="lvl" type="BoxContainer" parent="level_paused/numbers_con"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="lvl_num" type="Sprite2D" parent="level_paused/numbers_con/lvl"]
position = Vector2(32, 32)
texture = SubResource("AtlasTexture_pdwax")
offset = Vector2(0, 101)
hframes = 10
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ghkk8")
}

[node name="btn_hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_u2qs6")
bus = &"SFX"

[node name="btn_click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_ig87b")
volume_db = -5.0
bus = &"SFX"

[node name="bgm" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_nwks1")
volume_db = -5.0
autoplay = true
bus = &"Music"

[connection signal="ch_val" from="level_controller" to="level_selesai" method="_on_level_controller_ch_val"]
[connection signal="ch_val" from="level_controller" to="level_paused" method="_on_level_controller_ch_val"]
[connection signal="clear_val" from="level_controller" to="level_selesai" method="_on_level_controller_clear_val"]
[connection signal="clear_val" from="level_controller" to="level_paused" method="_on_level_controller_clear_val"]
[connection signal="isLessThan_1" from="level_controller" to="level_selesai" method="_on_level_controller_is_less_than_1"]
[connection signal="isLessThan_1" from="level_controller" to="level_paused" method="_on_level_controller_is_less_than_1"]
[connection signal="isLessThan_2" from="level_controller" to="level_selesai" method="_on_level_controller_is_less_than_2"]
[connection signal="isLessThan_2" from="level_controller" to="level_paused" method="_on_level_controller_is_less_than_2"]
[connection signal="lvl_val" from="level_controller" to="level_selesai" method="_on_level_controller_lvl_val"]
[connection signal="lvl_val" from="level_controller" to="level_paused" method="_on_level_controller_lvl_val"]
[connection signal="star" from="level_controller" to="level_selesai" method="_on_level_controller_star"]
[connection signal="star" from="level_controller" to="level_paused" method="_on_level_controller_star"]
[connection signal="isMoving" from="level_controller/karakter" to="level_controller" method="_on_karakter_is_moving"]
[connection signal="mouse_entered" from="level_controller/menu/pause" to="level_controller" method="_on_pause_mouse_entered"]
[connection signal="pressed" from="level_controller/menu/pause" to="level_controller" method="_on_pause_pressed"]
[connection signal="mouse_entered" from="level_controller/menu/reset" to="level_controller" method="_on_reset_mouse_entered"]
[connection signal="pressed" from="level_controller/menu/reset" to="level_controller" method="_on_reset_pressed"]
